--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
 .containerHeaderOne{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     background-color: #1F2937;
+    align-items: center;
 }
 .headerLinks{
     display: flex;
-    gap: 10px;
+    gap: 24px;
     list-style:none;
+    font-size: 18px;
 }
 body{
     margin: 0;
+    font-family: 'roboto';
 }
 .headerOne{
     color: #F9FAF8;
+    font-size: 24px;
 }
 a{
     text-decoration: none;
