--- a/style.css
+++ b/style.css
@@ -27,3 +27,17 @@ a{
 .headerLink{
     color: #E5E7EB;
 }
+.heroContainer{
+    display: flex;
+    justify-content: center;
+}
+.heroImage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.heroContent{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
