add hero sub text class to use headerLink styleling

--- a/style.css
+++ b/style.css
@@ -27,7 +27,8 @@ p {
 a{
     text-decoration: none;
 }
-.headerLink{
+.headerLink, .heroSubText{
+    font-size: 18px;
     color: #E5E7EB;
 }
 .heroContainer{
