--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ a{
 .heroContainer{
     display: flex;
     justify-content: center;
+    align-items: center;
     background-color: #1F2937;
 }
 .heroImage{
@@ -41,21 +42,31 @@ a{
     justify-content: center;
     align-items: center;
     background-color: gray;
+    width: 300px;
+    height: 50px;
+    padding: 75px;
+    margin-bottom: 40px;
 }
 .heroContent{
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    width: 375px;
+    width: 400px;
+    margin-right: 115px;
+    margin-bottom: 50px;
 }
 button{
     width: 100px;
     padding: 6px;
     border-radius: 6px;
     background-color: #3882F6;
+    
 }
 .heroHeader{
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
+}  
+.heroSubText{
+    margin-bottom: 10px;
 }
