--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ p {
 .headerOne{
     color: #F9FAF8;
     font-size: 24px;
+    margin-right: 56px;
 }
 a{
     text-decoration: none;
@@ -33,7 +34,7 @@ a{
 }
 .heroContainer{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     background-color: #1F2937;
 }
@@ -52,7 +53,6 @@ a{
     flex-direction: column;
     flex-wrap: wrap;
     width: 400px;
-    margin-right: 115px;
     margin-bottom: 50px;
 }
 button{
