--- a/style.css
+++ b/style.css
@@ -81,5 +81,25 @@ button{
 }
 img {
     width: 150px;
-    border: #3882F6;
+    height: 135px;
+    border: 5px solid #3882F6;
+    border-radius: 10px;
+    margin-bottom: 6px;
+}
+.image{
+    display: flex;
+    flex-direction: column;
+    width: 185px;
+    align-items: center;
+}
+.imagesContainer{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    text-align: center;
+    font-size: 18px;
+
+}
+.imagesUl{
+    display: flex;
 }
