style footer portion

--- a/style.css
+++ b/style.css
@@ -146,3 +146,10 @@ img {
     font-size: 24px;
     margin: 0;
 }
+.footer{
+    background-color: #1F2937;
+    color: #F9FAF8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
