--- a/style.css
+++ b/style.css
@@ -37,6 +37,7 @@ a{
     justify-content: space-evenly;
     align-items: center;
     background-color: #1F2937;
+    height: 400px;
 }
 .heroImage{
     display: flex;
@@ -53,7 +54,8 @@ a{
     flex-direction: column;
     flex-wrap: wrap;
     width: 400px;
-    margin-bottom: 50px;
+    margin-right: 95px;
+
 }
 button{
     width: 100px;
@@ -69,6 +71,9 @@ button{
 }  
 .heroSubText{
     margin-bottom: 10px;
+}
+.section2container{
+    height: 450px;
 }
 .section2Header{
     display: flex;
@@ -109,7 +114,7 @@ img {
     align-items: center;
     background-color: #E5E7EB;
     flex-direction: column;
-    height: 350px;
+    height: 450px;
 }
 .quote{
     display: flex;
@@ -152,4 +157,5 @@ img {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100px;
 }
